--- a/frontend/src/components/Layout.css
+++ b/frontend/src/components/Layout.css
@@ -1,30 +1,19 @@
-.app-container {
-  display: flex;
-  flex-direction: column;
+.iphone-container {
+  position: relative;
+  width: 100%;
   height: 100vh;
-  max-height: 100vh;
   overflow: hidden;
-  justify-content: space-between;
 }
 
 .status-bar {
-  background-color: #333;
-  color: #fff;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 30px; /* Adjust the height as needed */
+  background-color: #333; /* Status bar background color */
+  color: #fff; /* Status bar text color */
   display: flex;
-  justify-content: space-between;
   align-items: center;
-  padding: 10px;
-  font-size: 18px;
-  width: 414px;
-}
-.time {
-  margin-right: 10px;
-}
-
-.battery {
-  font-size: 24px;
-}
-.page-content {
-  flex-grow: 1;
-  overflow: auto;
+  justify-content: center;
 }
