--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -4,15 +4,6 @@ body {
   padding: 0;
 }
 
-.container {
-  max-width: 100%;
-  padding: 20px;
-  box-sizing: border-box;
-  margin: 0 auto;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-}
-
 .logo {
   max-width: 100%;
   height: auto;
@@ -96,11 +87,42 @@ p {
   font-size: 20px;
   padding-top: 0px;
 }
-.crimebutton {
+.crimebutton,
+.cop-button {
   justify-content: center;
   align-items: center;
   background-color: transparent;
   border: none;
   padding-top: 0;
+  margin-top: -8%;
+}
+.eservices-header,
+.cop {
+  padding: 20px;
   margin-top: -5%;
+  color: #555555;
+  font-size: 20px;
+}
+
+.eservices {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.eservices img {
+  max-width: 100%;
+  height: auto;
+}
+.eservices button {
+  background-color: transparent;
+  border: none;
+  margin-top: -10%;
+}
+
+.about,
+.toc,
+.privacy {
+  background-color: transparent;
+  border: none;
 }
