--- a/frontend/src/components/ContactUs.css
+++ b/frontend/src/components/ContactUs.css
@@ -1,13 +1,25 @@
 .contactus {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   color: black;
-  padding: 10px;
+  padding: 2%;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  font-size: 18px;
 }
 
 .contactus a {
   color: black;
   text-decoration: none;
   margin-right: 20px;
+}
+.contact-header {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: black;
+  font-size: 20px;
+}
+.contact-content {
+  padding: 20px;
+  margin-top: -5%;
 }
