--- a/frontend/src/components/News.css
+++ b/frontend/src/components/News.css
@@ -1,15 +1,11 @@
 .news-container {
   flex: 1;
   background-color: transparent;
-  padding: 10px;
+  padding: 20px;
   border-radius: 5px;
-  box-shadow: 0px 10px 10px grey;
-  border: 1px solid #333;
+  box-shadow: rgba(0, 0, 0, 0.15) 0px 3px 3px 0px;
+  border: 0px solid #333;
   max-width: 350px;
-
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 .news-status {
