--- a/frontend/src/components/Home.css
+++ b/frontend/src/components/Home.css
@@ -4,13 +4,9 @@ body {
   padding: 0;
 }
 
-.top-header {
-  font-size: 20px;
-  align-items: space-between;
-  justify-content: center;
-  display: flex;
+.minilogo {
+  padding: 20px;
 }
-
 h1 {
   font-size: 24px;
   margin: 0;
@@ -128,8 +124,11 @@ p {
 .top-header {
   display: flex;
   justify-content: space-between;
+  align-items: center;
+  margin-bottom: -6%;
 }
 .side-content {
   display: flex;
-  justify-content: flex-end;
+  justify-content: right;
+  padding: 20px;
 }
