--- a/frontend/src/components/Singpass.css
+++ b/frontend/src/components/Singpass.css
@@ -1,13 +1,7 @@
-.singpass-container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  height: 100vh;
-}
-
-.loginbutton {
-  margin-top: 20px;
+.login-button {
+  position: relative;
+  top: 0;
+  padding: 0;
 }
 .page-content {
   flex-grow: 1;
