--- a/frontend/src/components/AppealOne.css
+++ b/frontend/src/components/AppealOne.css
@@ -77,7 +77,7 @@
 }
 
 .button-icon {
-  margin-right: 5px; /* Adjust the margin as needed */
+  margin-right: 5px;
 }
 .appeal-hotline {
   display: flex;
