--- a/frontend/src/components/LostNFound.css
+++ b/frontend/src/components/LostNFound.css
@@ -59,6 +59,8 @@ i-star {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  padding: 0 20px;
+  margin-top: -5%;
 }
 .input-lnf {
   display: flex;
@@ -66,4 +68,79 @@ i-star {
   align-items: center;
   flex-direction: column;
   text-align: left;
+}
+.star {
+  color: #eb302f;
+}
+.info {
+  color: #2e2e2e;
+}
+.description {
+  color: #3a3a3a;
+  text-align: left;
+  font-size: 12px;
+  margin-top: -5%;
+}
+.input-decription {
+  width: 350px;
+}
+.custom-input {
+  width: 350px; /* Make the input take up 100% of its container width */
+  padding: 10px; /* Increase padding to make it thicker */
+  border: 2px solid #ccc; /* Add a border for styling */
+  border-radius: 5px; /* Add rounded corners for styling */
+  font-size: 16px; /* Adjust font size as needed */
+  margin-top: 3%;
+}
+.handle-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  background-color: transparent;
+  width: 100%;
+  border: none;
+  padding-top: 0;
+  justify-content: space-evenly; /* Add space between and evenly distribute */
+}
+
+.backbutton {
+  color: #1d1a60;
+  background-color: transparent;
+  border: 1px solid #1d1a60;
+  display: flex;
+  align-items: center;
+  height: 50px;
+  width: 150px;
+  margin-right: 10px; /* Add margin to create space between buttons */
+  justify-content: center;
+}
+
+.confirmbutton {
+  background-color: #1d1a60;
+  color: #ffffff;
+  height: 50px;
+  width: 150px;
+  display: flex;
+  align-items: center;
+  margin-left: 10px; /* Add margin to create space between buttons */
+  justify-content: center;
+}
+.lnf-complete {
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+}
+.return {
+  width: 350px;
+  max-height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  background-color: #1d1a60;
+  color: #ffffff;
+}
+.return-container {
+  justify-content: center;
+  display: flex;
 }
