--- a/frontend/src/components/LoginPage.css
+++ b/frontend/src/components/LoginPage.css
@@ -64,7 +64,7 @@
   background-color: transparent;
   margin-bottom: -20%;
 }
-.description {
+.description-login {
   color: #1d1a60;
   text-align: center;
   margin-top: 0%;
@@ -101,9 +101,4 @@
   font-size: 10px;
   margin-top: -2%;
   font-family: "Neue Montreal", sans-serif;
-}
-
-@font-face {
-  font-family: "Neue Montreal";
-  src: local("Neue Montreal");
 }
